Add some more possible options

--- a/prototype/w02.1-install.md
+++ b/prototype/w02.1-install.md
@@ -2,3 +2,5 @@ Installing micropython (See resources )
 
 * Ensure everyone has micropython installed
 * Ensure everyone has a serial console
+
+* optional, set the verbose thing to off in the boot.py
