--- a/prototype/w02.2-wifi.md
+++ b/prototype/w02.2-wifi.md
@@ -1,6 +1,8 @@
 Wifi setup
 
 * Basic wifi setup
+* demonstrate working with simple tests (ping? webrepl?)
+
 * Writing a script to start wifi
 * installing that script on boot
 * ampy?
