Add some more suggestions for the wifi setup lesson

--- a/prototype/w02.2-wifi.md
+++ b/prototype/w02.2-wifi.md
@@ -2,8 +2,15 @@ Wifi setup
 
 * Basic wifi setup
 * demonstrate working with simple tests (ping? webrepl?)
+* * clone webrepl https://github.com/micropython/webrepl.git
+* * update webrepl.html to fix ip addr
 
 * Writing a script to start wifi
 * installing that script on boot
 * ampy?
 * itterate over improving the wifi script into a nice module
+
+* network discovery
+    TODO
+    - DHCP hostname appears to be a static "espressif"
+    - MAC address prefix? 30:ae:a4
