Add a chip name to the TODO list

--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@
 * ampy with a hack that means you dont need to run pip or install setuputils
 * lesson plan for building the wifi script and at the same time introduction
   to python
+* txs0108e
+
